--- a/img/artist/desktop.ini
+++ b/img/artist/desktop.ini
@@ -2,3 +2,4 @@
 94542-1a069.jpg=@94542-1a069,0
 Webp.net-resizeimage.jpg=@Webp.net-resizeimage,0
 ???????? ????????????.jpg=@???????? ????????????,0
+z-1jpg_4.jpg=@z-1jpg_4,0
